# TritiumDesorption

./: .env.example  .gitattributes  .gitignore  README.md  app.py  demo.ipynb  demo_workshop.ipynb  params.json  pyproject.toml
fusion_energy/: plot.py
notebooks/: demo.ipynb
resources/campaigns/ukaea/: params.json
resources/datasets/: ukaea.csv  ukaea_small.csv
