[tool.poetry]
name = "fusion_energy"
version = "0.0.0"
description = "Using twinLab to create models for processes in nuclear fusion"
authors = ["Alexander Mead <alexander@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
twinlab = "^1.3.2"
jupyter = "^1.0.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
