[tool.poetry]
name = "fusion_energy"
version = "0.0.0"
description = "Using twinLab to create models for processes in nuclear fusion"
authors = ["Alexander Mead <alexander@digilab.co.uk>"]
readme = "README.md"
packages = [{ include = "fusion_energy" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
twinlab = "^2.9.0"
jupyter = "^1.0.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pandas = "^2.0.0"
streamlit = "^1.33.0"
jupyterlab-deck = "^0.2.0"
watchdog = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
